# agentic-graph-rag-evaluation-cometml

./: .env.example  .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
research_agent/agents/: base.py  research_assistant.py
research_agent/components/: experiment_tracker.py
research_agent/components/database/: ingest.py  neo4j_cleaner.py  neo4j_client.py  neo4j_ingestion.py  vector_store.py
research_agent/components/paper/: tool.py
research_agent/components/rag/: embeddings.py  indexing.py  tool.py
research_agent/config/: settings.py
research_agent/core/: graph.py  messages.py  state.py
research_agent/orchestrator/: coordinator.py
research_agent/streamlit/: layout.py  main.py  message.py  session.py  ui_component.py
research_agent/tools/: base.py  paper_lookup.py  rag.py
scripts/: neo4j_cleaner.py  preprocess.py
src/: main.py
src/agents/: base.py  research_assistant.py
src/components/database/: ingest.py  vector_store.py
src/components/evaluation/: custom_metric.py  experiment_tracker.py  opik_evaluator.py
src/components/paper/: models.py  tool.py
src/components/rag/: indexing.py  tool.py
src/config/: settings.py
src/core/: graph.py
src/orchestrator/: coordinator.py
src/streamlit/: layout.py  main.py  predefined_questions.py
src/tools/: paper_lookup.py  rag.py
src/utils/: paper_id_extractor.py
